unpackaged/main/default/objects/NLExLgRq__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>External Legal Request for this account</description>
    <inlineHelpText>External Legal Requests for this account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ELR</relationshipName>
    <type>Lookup</type>
</CustomField>