unpackaged/main/default/objects/NLExLgRq__c/fields/ApStat__c.field-meta.xml
<CustomField>
    <fullName>ApStat__c</fullName>
    <description>Changing this status to Rejected or Approved will update the related account and notify the contract owner</description>
    <inlineHelpText>Changing this status to Rejected or Approved will update the related account and notify the contract owner</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
                <default>true</default>
                <label>Under Review</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>