unpackaged/main/default/objects/NLExLgRq__c/fields/Ctrt__c.field-meta.xml
<CustomField>
    <fullName>Ctrt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>External Legal Requests Initiatied by this contract</description>
    <inlineHelpText>External Legal Requests Initiatied by this contract</inlineHelpText>
    <label>Contract and Procurement</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>ELRC</relationshipName>
    <type>Lookup</type>
</CustomField>