unpackaged/main/default/objects/NLExLgRq__c/fields/Legal_Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Legal_Reason_for_Rejection__c</fullName>
    <description>Legal/Finance team&#39;s short explanation for rejecting vendor documents</description>
    <inlineHelpText>Legal/Finance team&#39;s short explanation for rejecting vendor documents</inlineHelpText>
    <label>Reason for Rejection</label>
    <type>TextArea</type>
</CustomField>