unpackaged/main/default/objects/NLExLgRq__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>The type of request being performed - for example a legal document  review for vendors or a legal document review for Finance</description>
    <inlineHelpText>The type of request being performed - for example a legal document  review for vendors or a legal document review for Finance</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance Vendor Document Review</fullName>
            </value>
            <value>
                <fullName>Legal Vendor Document Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>